--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="it.projector.lamba.projector.MainActivity"
+        tools:context=".activities.MainActivity"
         tools:showIn="@layout/app_bar_main">
     </LinearLayout>
 </ScrollView>
