--- a/app/src/main/res/layout/expandable_panel_layout.xml
+++ b/app/src/main/res/layout/expandable_panel_layout.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/card_project_presentations"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:listitem="@layout/project_resource_item"/>
@@ -26,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/card_project_repositories"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:listitem="@layout/project_resource_item"/>
