--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/projects_rv"
+<android.support.v7.widget.RecyclerView android:id="@+id/projects_rv"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:listitem="@layout/project_card"/>
+    tools:listitem="@layout/project_card"
+    xmlns:app="http://schemas.android.com/apk/res-auto" />
 
