--- a/app/src/main/res/layout/expandable_panel_layout.xml
+++ b/app/src/main/res/layout/expandable_panel_layout.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="8dp">
     <TextView
@@ -14,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <android.support.v7.widget.RecyclerView
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         android:id="@+id/card_project_presentations"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,5 +32,6 @@
         android:id="@+id/card_project_repositories"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         tools:listitem="@layout/project_resource_item"/>
 </LinearLayout>
