--- a/app/src/main/res/layout/expandable_panel_layout.xml
+++ b/app/src/main/res/layout/expandable_panel_layout.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:layout_margin="8dp">
     <TextView
         android:layout_marginTop="16dp"
         android:text="Presentazioni"
